--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
     <style>
       body {
         margin: 0;
-        overflow: hidden;
-        background: #f0f0f0;
       }
       canvas {
         display: block;
       }
+      .canvas-container {
+        width: 100%;
+        height: 100%;
+        border: 2px solid #555;
+        overflow: auto; /* 🔹 scrollbar w razie potrzeby */
+        background: #ddd;
+      }
     </style>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div class="canvas-container">
+      <canvas id="canvas" width="1600" height="1200"></canvas>
+    </div>
   </body>
 </html>
