--- a/index.html
+++ b/index.html
@@ -6,85 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script type="module" src="ed.js"></script>
     <title>Canvas test</title>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-        margin: 3px;
-        padding: 0;
-        overflow: hidden;
-        background: #f5f5f5;
-      }
-      header {
-        height: 160px;
-      }
-      .navbar {
-        /* height: 100%; */
-      }
-      .navbar-brand img {
-        height: 40px;
-        width: 40px;
-        margin-right: 10px;
-      }
-      .nav-tabs .nav-link {
-        color: #333;
-      }
-      .nav-tabs .nav-link.active {
-        background-color: #e9ecef;
-        border-color: #dee2e6 #dee2e6 #fff;
-        color: #0d6efd;
-      }
-      .tab-content {
-        height: 100%;
-        background: #fff;
-        border: 1px solid #dee2e6;
-        border-top: none;
-        padding: 5px 20px;
-      }
-      .row {
-        height: 100%;
-        width: 100%;
-        padding: 0px;
-        margin: 0px;
-      }
-      .col,
-      .col-9,
-      .col-4,
-      .col-3 {
-        height: 100%;
-        padding: 2px 0px;
-        margin: 0px;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        display: block;
-        padding: 0;
-        margin: 0;
-      }
-      #canvas {
-        background-color: silver;
-      }
-      #canvas2 {
-        background-color: blue;
-      }
-      .canvas-content {
-        padding: 0;
-        margin: 0px;
-        min-height: calc(100vh - 250px);
-        overflow: hidden; /* 🔹 scrollbar w razie potrzeby */
-        background: white;
-      }
-
-      footer {
-        height: 80px;
-        padding: 0;
-        margin: 0;
-      }
-    </style>
   </head>
   <body class="">
     <header>
@@ -130,7 +54,33 @@
       <!-- 🔹 Panele treści -->
       <div class="tab-content" id="editorTabsContent">
         <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-          <h5>Wybrano Zakładkę 1</h5>
+          <ul class="menubar__nav menubar__nav--only-icon position-relative">
+            <li>
+              <a href="#" class="menubar__nav-link menubar__nav-link--only-icon">
+                <i class="menubar__icon fas fa-bell fa-fw"> </i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="menubar__nav-link menubar__nav-link--only-icon">
+                <i class="menubar__icon fas fa-envelope fa-fw"></i>
+              </a>
+            </li>
+            <li class="menubar__nav__divider"></li>
+            <span class="position-absolute bottom-0 start-0">ddddddddddd</span>
+          </ul>
+          <ul class="menubar__nav menubar__nav--only-icon">
+            <li>
+              <a href="#" class="menubar__nav-link menubar__nav-link--only-icon">
+                <i class="menubar__icon fas fa-bell fa-fw"> </i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="menubar__nav-link menubar__nav-link--only-icon">
+                <i class="menubar__icon fas fa-envelope fa-fw"></i>
+              </a>
+            </li>
+            <li class="menubar__nav__divider"></li>
+          </ul>
         </div>
         <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
           <h5>Wybrano Zakładkę 2</h5>
