--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="css/fontawesome-free/css/all.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script type="module" src="ed.js"></script>
-    <title>Canvas test</title>
+    <title>Tiles editor</title>
   </head>
+  <style>
+    .level-card img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+    .level-card .card-body {
+      padding: 0.5rem 0.75rem;
+    }
+    .level-card small {
+      font-size: 0.8rem;
+    }
+  </style>
   <body class="">
     <header>
       <nav class="navbar navbar-expand-lg bg-light border-bottom shadow-sm align-items-start">
@@ -105,16 +119,72 @@
           <canvas id="canvas2"></canvas>
         </div>
       </div>
+    </div>
+    <footer class="navbar-dark bg-black">Stopka</footer>
+    <!-- Modal trigger button -->
+    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#modalId">Launch</button>
 
-      <!-- <div class=""> -->
+    <!-- Modal Body -->
+    <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+    <!-- 🟦 Modal z listą poziomów -->
+    <div class="modal fade" id="modalId" tabindex="-1" aria-labelledby="modalTitleId" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title fw-bold text-primary" id="modalTitleId">📘 Lista poziomów</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
 
-      <!-- </div> -->
+          <div class="modal-body bg-light">
+            <!-- 🔹 Przycisk nowego poziomu -->
+            <div class="d-flex mb-3">
+              <form id="newLevelForm" class="row g-1 justify-content-between">
+                <div class="col-3">
+                  <label for="levelName" class="form-label mb-0 small text-muted">Nazwa</label>
+                  <input type="text" class="form-control form-control-sm" id="levelName" placeholder="np. level_1" required />
+                </div>
+                <div class="col-2">
+                  <label for="levelWidth" class="form-label mb-0 small text-muted">Szerokość</label>
+                  <input type="number" class="form-control form-control-sm" id="levelWidth" value="500" min="1" />
+                </div>
+                <div class="col-2">
+                  <label for="levelHeight" class="form-label mb-0 small text-muted">Wysokość</label>
+                  <input type="number" class="form-control form-control-sm" id="levelHeight" value="100" min="1" />
+                </div>
+                <div class="col-2">
+                  <label for="tileSize" class="form-label mb-0 small text-muted">Tile size</label>
+                  <input type="number" class="form-control form-control-sm" id="tileSize" value="16" min="1" />
+                </div>
+                <div class="col-auto d-flex justify-content-end align-items-end">
+                  <button type="button" class="addLevelBtn btn btn-success btn-sm px-3"><i class="bi bi-plus-lg"></i> Utwórz</button>
+                </div>
+              </form>
+
+              <!-- 🔸 Info o pamięci -->
+              <!--  -->
+            </div>
+            <div class="ms-2 text-end flex-shrink-0">
+              <small id="storageSize" class="text-muted"></small>
+            </div>
+            <!-- 🔹 Kontener na listę poziomów -->
+            <div id="levelsContainer" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+              <ul id="levelListEl"></ul>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zamknij</button>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <footer class="navbar-dark bg-black">Stopka</footer>
+    <!-- Optional: Place to the bottom of scripts -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"></script>
+    <script></script>
   </body>
 </html>
